# ai-os-serve

./: .env.example  .gitignore  AGENT.md  README.md  alembic.ini  pyproject.toml
.cursor/plans/: copilot_v1.2_iteration_b9361eaf.plan.md  prd_v1.0_解读_966ac43a.plan.md
.cursor/rules/: ai-copilot-serve.mdc
_legacy_app/core/: config.py  context.py
app/: main.py
app/core/: deps.py
app/db/: session.py
docs/: INDEX.md  api-contract.md
migrations/: env.py
migrations/versions/: 0001_create_profiles.py  0002_v12_tables.py  001_add_role_spec_and_profile_fields.py  20260525_team_v18_workspace_chat.py
prd/: ver1.0.md  ver1.2.md
resources/profile-presets/: hermes-expert-profiles.team_v1.4.yaml
scripts/: bootstrap-windows.ps1  migrate-windows.ps1  mock_hermes_gateway.py  service-dev.ps1  service-install.ps1  service-start.ps1  service-status.ps1  service-stop.ps1  service-uninstall.ps1  smoke-test-windows.ps1  smoke-test.ps1
src/: __init__.py  app.py  main.py  version.py
src/api/: deps.py  router.py
src/core/: config.py  constants.py  (+5 more)
tests/: conftest.py  test_checksum.py  test_cors_asgi.py  test_gateway_autostart_lifespan.py  test_gateway_process_pid.py  test_gateway_shutdown_orphans.py  test_gateway_subprocess_windows.py  test_gateway_supervisor_boot.py  test_permission_service.py  test_port_allocator.py  test_profile_port_update.py  test_role_compiler.py  test_role_library_import.py  test_role_library_preset_resolve.py  test_role_library_service.py  test_snapshot_save_schema.py  test_v12_integration.py  test_v1_acceptance.py  test_version_conflict.py
(+101 files in other folders)
