[project]
name = "smc-copilot-serve"
version = "0.1.0"
description = "smc-copilot-desktop local control plane — Hermes profiles, gateway supervisor"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.112,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "sqlalchemy[asyncio]>=2.0,<3",
  "aiosqlite>=0.20,<1",
  "alembic>=1.13,<2",
  "httpx>=0.27,<1",
  "structlog>=24.1,<25",
  "psutil>=6,<8",
  "pyyaml>=6,<7",
  "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<1",
  "ruff>=0.6,<1",
]
service = [
  "pywin32>=306; platform_system == 'Windows'",
]

[project.scripts]
smc-copilot-serve = "main:main"
ai-copilot-service = "local_service.service_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]

[tool.hatch.build]
dev-mode-dirs = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]
